--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,20 @@
   }
 }
 
+/*
+Header
+*/
+.header_link {
+  letter-spacing: 0.1em;
+}
+
+/*
+Main
+*/
 .play_font {
   font-family: "Playfair Display", serif;
 }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -72,12 +83,14 @@ code {
 .section_title {
   font-size: clamp(1.2rem, 10vw + 0.5rem, 1.2rem);
   line-height: 1;
+  letter-spacing: 0.1em;
   /* font-weight: 900; */
   text-transform: uppercase;
 }
-
 .card {
-  background-color: #212121;
+  border-top: 1px solid white;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
 }
 
 .algo_button {
@@ -125,9 +138,11 @@ code {
   writing-mode: vertical-rl;
   text-orientation: mixed;
   text-transform: uppercase;
+  letter-spacing: 1.2em;
 }
 
 .vertical_reverse {
+  letter-spacing: 0.4em;
   writing-mode: vertical-lr;
   text-orientation: mixed;
   text-transform: uppercase;
@@ -216,7 +231,7 @@ code {
   width: 90%;
   height: 50%;
   border-radius: 4px;
-  background: #212121;
+  /* background: #212121; */
   display: flex;
   gap: 5px;
   padding: 0.4em;
@@ -229,7 +244,7 @@ code {
   /* cursor: pointer; */
   border-radius: 2px;
   transition: all 0.5s;
-  background: #212121;
+  /* background: #d3cdcd; */
   border: 1px solid #ede9ea;
   display: flex;
   justify-content: center;
@@ -282,11 +297,12 @@ Skills
   background-color: white;
   color: black;
 }
+
 .skill {
   /* font-size: 18px; */
   letter-spacing: 2px;
   /* text-transform: uppercase; */
-  background: #212121;
+  /* background: #212121; */
 
   display: inline-block;
   text-align: center;
