--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
 
 @keyframes fadeIn {
   0% {
@@ -50,6 +67,10 @@ Header
 /*
 Main
 */
+.flex_childred_full > * {
+  width: 100%;
+  display: flex;
+}
 .hero-title {
   font-size: clamp(2.5rem, 10vw + 0.5rem, 2.5rem);
   line-height: 1;
@@ -58,24 +79,6 @@ Main
 }
 .play_font {
   font-family: "Playfair Display", serif;
-}
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-::-webkit-scrollbar {
-  display: none;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 .text_scale {
@@ -322,21 +325,58 @@ Skills
   min-width: 550px;
 }
 
-/* .project_card:hover {
-  background-color: rgb(255, 255, 255);
-} */
-
-/* .project_card:hover .project_card__content h1 {
-  color: rgb(0, 0, 0);
+.project_card_content {
+  background-color: white;
+}
+.gray_border_bottom {
+  line-height: 2em;
+  border-bottom: 1px solid #30363d;
 }
 
-.project_card :hover .content {
-  transform: rotateY(0.5turn);
-} */
+.button_default {
+  padding: 0.8em 1.2em;
+  border: 2px solid #000000;
+  position: relative;
+  overflow: hidden;
+  background-color: transparent;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+  transition: 0.3s;
+  z-index: 1;
+  font-family: inherit;
+  color: #000000;
+}
 
-/* .project_card_content {
-  transform: rotateY(1turn);
-} */
+.button_default::before {
+  content: "";
+  width: 0;
+  height: 300%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  background: rgb(27, 27, 47);
+
+  transition: 0.5s ease;
+  display: block;
+  z-index: -1;
+}
+
+.button_default:hover::before {
+  width: 105%;
+}
+
+.button_default:hover {
+  color: rgb(252, 252, 252);
+}
+
+.project_button_small {
+  border-radius: 2px;
+  padding: 0.3em;
+  background-color: white;
+  color: black;
+}
 
 /*
 queries
@@ -351,3 +391,17 @@ queries
 /*
 test
 */
+.input_default {
+  padding: 0.3em;
+  /* background-color: rgba(57, 63, 84, 0.2); */
+  border-radius: 2px;
+  border-bottom: 2px solid black;
+}
+
+.input_default:focus {
+  outline: none;
+}
+
+.white_svg svg > path {
+  stroke: white;
+}
