--- a/src/index.css
+++ b/src/index.css
@@ -319,15 +319,26 @@ Skills
 */
 
 .project_card {
-  transition: all 0.2s linear;
-  width: 45%;
+  /* transition: all 0.2s linear; */
+  /* max-width: 500px; */
   height: 70%;
   min-width: 550px;
+  /* transition: all 10s linear; */
 }
 
+.project_front:hover {
+  background-color: white;
+}
+
+.project_front:hover .project_item {
+  color: black;
+}
+@media screen {
+}
 .project_card_content {
   background-color: white;
 }
+
 .gray_border_bottom {
   line-height: 2em;
   border-bottom: 1px solid #30363d;
@@ -335,6 +346,7 @@ Skills
 
 .button_default {
   padding: 0.8em 1.2em;
+  border-radius: 5px;
   border: 2px solid #000000;
   position: relative;
   overflow: hidden;
@@ -384,10 +396,17 @@ queries
 @media screen and (max-width: 1600px) {
   .project_card {
     width: 100%;
+    height: 50%;
     min-width: 150px;
   }
 }
 
+@media screen and (min-width: 1600px) {
+  .project_card {
+    width: 500px;
+    min-width: 150px;
+  }
+}
 /*
 test
 */
